fix map and overflow

--- a/styles/components/side-view.styl
+++ b/styles/components/side-view.styl
@@ -5,6 +5,7 @@
   width 70%
   background WhiteSmoke
   height 100%
+  overflow auto
   z-index 1020
   transition right 0.4s
   &.show
